--- a/Racing Game/index.html
+++ b/Racing Game/index.html
@@ -2,6 +2,9 @@
 <head></head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="script.js"></script>
+    <script src="js/objects.js"></script>
+    <script src="js/imageLoading.js"></script>
+    <script src="js/commonGraphics.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
