--- a/test.html
+++ b/test.html
@@ -8,17 +8,15 @@
 <body>
     <script>
         var type = {
-            empty: { code: 0, file: "empty5.png" },//0,
             wall: { code: 1, file: "wall1.png" },//1,
+            empty: { code: 0, file: "empty5.png" },//0,
             playerLocation: { code: 2 },//2
             goal: { code: 3, file: "goal.png" },//3,
             trees: { code: 4, file: "trees.png" },//4,
             flag: { code: 5, file: "flag.png" }//5,
         }
-        console.log(type);
-        
-        for(var item in type)
-            console.log(type[item].file);
+        type.empty.img = document.createElement("img");
+        console.log();
     </script>
 </body>
 
