--- a/Adventure Hero/index.html
+++ b/Adventure Hero/index.html
@@ -8,7 +8,7 @@
     <canvas id="gameCanvas" width="1650" height="950"></canvas>
     <script src="js/objects.js"></script>
     <script src="js/imageLoading.js"></script>
-    <script src="js/commonGraphics.js"></script>
+    <script src="js/graphicsFunctions.js"></script>
     <script src="js/main.js"></script>
 </body>
 
