--- a/Racing Game/index.html
+++ b/Racing Game/index.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="js/objects.js"></script>
+    <script src="js/objectsNEW.js"></script>
     <script src="js/imageLoading.js"></script>
     <script src="js/commonGraphics.js"></script>
     <script src="js/main.js"></script>
